fix(client): hero height on mobile

--- a/client/src/assets/css/hero.module.css
+++ b/client/src/assets/css/hero.module.css
@@ -1,7 +1,7 @@
 .hero {
 	display: flex;
 	width: 100%;
-	max-height: calc(100vh - 55px);
+	min-height: calc(100dvh - 55px);
 	max-width: 1420px;
 	margin: 0 auto;
 }
@@ -38,7 +38,7 @@
 		display: flex;
 		flex-direction: column;
 		padding-top: 36px;
-		max-height: calc(100vh - 55px);
+		min-height: calc(100dvh - 55px);
 	}
 
 	.hero h1 {
